--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.7",
+    "@types/node": "^20.4.9",
     "@types/node-fetch": "^2.6.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -29,8 +29,8 @@
     "moment-timezone": "^0.5.43",
     "node-fetch": "^2.6.12",
     "npm": "^9.8.1",
-    "puppeteer": "^20.9.0",
+    "puppeteer": "^21.0.2",
     "qrcode": "^1.5.3",
-    "whatsapp-web.js": "^1.21.0"
+    "whatsapp-web.js": "^1.21.1-alpha.1"
   }
 }
